force-app/main/default/objects/Lead/fields/Lead_Segment__c.field-meta.xml
<CustomField>
    <fullName>Lead_Segment__c</fullName>
    <description>Lead segment picklist values</description>
    <label>Lead Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contractor</fullName>
            </value>
            <value>
                <fullName>Direct customer</fullName>
            </value>
            <value>
                <fullName>Distributor</fullName>
            </value>
            <value>
                <fullName>End user</fullName>
            </value>
            <value>
                <fullName>Manufacturer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>