force-app/main/default/objects/Lead/validationRules/Arbutus_or_Fundamental_Account.validationRule-meta.xml
<ValidationRule>
    <fullName>Arbutus_or_Fundamental_Account</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    IsConverted,
    Arbutus_Account__c = NULL,
    Fundamental_Account__c = NULL
)</errorConditionFormula>
    <errorMessage>Please flag if this is a Arbutus or Fundamental Lead</errorMessage>
</ValidationRule>