force-app/main/default/objects/Lead/listViews/Arbutus_Lead_queue_Lead.listView-meta.xml
<ListView>
    <fullName>Arbutus_Lead_queue_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Arbutus Lead queue</label>
    <queue>Arbutus_Lead_queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>