force-app/main/default/objects/Lead/listViews/Fundamentals_Lead_queue_Lead.listView-meta.xml
<ListView>
    <fullName>Fundamentals_Lead_queue_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Fundamentals Lead queue</label>
    <queue>Fundamentals_Lead_queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>